# measure-automation

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
_audit_out/: report.md
_audit_out/interim/: db_operations.csv  spans.csv
_audit_out/processed/: service_rank.csv
_audit_out/raw/traces/: inventory-service_traces.json
_audit_out2/: report.md
_audit_out2/interim/: endpoint_table_map.csv  endpoints.csv
_audit_out2/processed/: service_rank.csv  service_scom.csv  suspicious_services.csv
_audit_out2/raw/traces/: notification-service_traces.json
_audit_out3/: report.md
config/: settings.yaml
data/interim/: db_operations.csv  endpoint_table_map.csv
data/processed/: service_rank.csv  service_rank_simple.csv  service_rank_weighted.csv  service_scom.csv  suspicious_services.csv
data/raw/traces/: jaeger_traces_inventory-service_20260430_161407.json  order-service_traces.json  user-service_traces.json
docs/: research_method.md
reports/latest/: report.md
scripts/: auto_instrument_and_analyze.py  run_llm_demo.py
scripts/teastore/: deploy_and_trace.py  docker-compose-otel.yaml
src/boundary_analyzer/: __init__.py  __main__.py  _utils.py  cli.py  settings_loader.py
src/boundary_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/boundary_analyzer/auto/: deploy.py  discover.py  errors.py  instrumentation_marker.py  live_ui.py  models.py  orchestrator.py  run_registry.py  teastore_runner.py  traffic.py  traffic_engine.py
src/boundary_analyzer/auto_setup/: README.md  __init__.py  _detect.py  _install.py  django_wrapper.py  djangorest_wrapper.py  express_wrapper.js  flask_wrapper.py  (+8 more)
tests/: conftest.py  test_auto_deploy.py  test_auto_discover.py  test_auto_dotnet_plugin.py  test_auto_errors.py  test_auto_java_plugin.py  test_auto_models.py  test_auto_node_plugin.py  test_auto_php_plugin.py  test_auto_plugins.py  test_auto_python_plugin.py  test_auto_traffic.py  test_cli.py  test_cli_integration.py  test_dashboard_smoke.py  test_dashboard_unit.py  test_detection.py  test_endpoint_source_scan.py  test_endpoint_tracking.py  test_jaeger_integration.py  test_llm_analysis.py  test_llm_client.py  test_llm_context.py  test_llm_instrumentation.py  test_llm_prompts.py  test_log_ingestion.py  test_metrics.py  test_parsing.py  test_pipeline_dedup.py  test_pipeline_integration.py  test_run_registry_meta.py  test_setup_instructions.py  test_teastore_pipeline.py  test_teastore_runner.py  test_validation.py
(+101 files in other folders)
