[project]
name = "boundary-analyzer"
version = "0.7.2"
description = "SCOM-based microservice boundary analysis from Jaeger traces"
readme = "CHANGELOG.md"
license = "MIT"
authors = [{ name = "Ray Ague", email = "rayague03@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.2.0",
  "PyYAML>=6.0.1",
  "dash>=2.14.0",
  "plotly>=5.18.0",
  "numpy>=1.26.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/rayague/measure-automation"
Repository = "https://github.com/rayague/measure-automation"

[project.scripts]
boundary-analyzer = "boundary_analyzer.cli:main"
mba = "boundary_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.11.0",
  "mypy>=1.0.0",
  "nox>=2024.0.0",
]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["boundary_analyzer"]
omit = ["*/tests/*", "*/test_data/*"]

[tool.coverage.report]
show_missing = true
fail_under = 45
